--- a/payment.html
+++ b/payment.html
@@ -194,7 +194,7 @@
       <div class="upi-id">UPI ID: sailakannans@okaxis</div>
       <div class="qr-code">
         <img
-          src="payment1.jpeg"
+          src="photo_6260089618070356805_y.jpeg"
           alt="QR Code"
         />
       </div>
