--- a/account.html
+++ b/account.html
@@ -281,10 +281,11 @@
         </div>
 
         <div class="action-buttons">
-            <div class="action-button" data-page="deposit">
-                <img src="https://img.icons8.com/ios-filled/50/000000/money-bag.png" alt="Deposit Icon">
-                Deposit
-            </div>
+            <div class="action-button" data-page="deposit" onclick="location.href='payment.html';">
+    <img src="https://img.icons8.com/ios-filled/50/000000/money-bag.png" alt="Deposit Icon">
+    Deposit
+</div>
+
             <div class="action-button" data-page="withdraw">
                 <img src="https://img.icons8.com/ios-filled/50/000000/cash-in-hand.png" alt="Withdraw Icon">
                 Withdraw
